--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "url": "https://github.com/AlexWetzel/NYT-React/issues"
   },
   "homepage": "https://github.com/AlexWetzel/NYT-React#readme",
+  "devDependencies": {
+    "concurrently": "^3.5.0",
+    "nodemon": "^1.11.0"
+  },
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
