--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongoose": "^4.13.9",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "concurrently": "^3.5.0",
+    "nodemon": "^1.11.0"
   }
 }
