--- a/package.json
+++ b/package.json
@@ -22,15 +22,14 @@
   "homepage": "https://github.com/AlexWetzel/NYT-React#readme",
   "devDependencies": {
     "concurrently": "^3.5.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.18.10"
   },
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "concurrently": "^3.5.0",
     "express": "^4.16.2",
     "mongoose": "^4.13.9",
-    "request": "^2.83.0",
-    "concurrently": "^3.5.0",
-    "nodemon": "^1.11.0"
+    "request": "^2.88.0"
   }
 }
