--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.2",
     "mongoose": "^4.13.9",
     "nodemon": "^1.18.10",
